# sestetica-pewma-booking

./: .gitignore  index.html  tailwind.config.ts
backend/: pyproject.toml
backend/app/: auth.py  database.py  email_service.py  main.py
src/: index.css
src/components/: About.tsx  Booking.tsx  Footer.tsx  Gallery.tsx  Header.tsx  Hero.tsx  Services.tsx
src/lib/: api.ts
src/pages/: AdminDashboard.tsx  AdminLogin.tsx  Index.tsx
